公開データ

--- a/_assets/scss/app.scss
+++ b/_assets/scss/app.scss
@@ -46,6 +46,8 @@
 // editor style
 @import "object/project/_home";
 @import "object/project/_page";
+@import "object/project/_form";
+
 
 
 // -----------------------------------------------------------------
